--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,43 @@
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+
+  -webkit-user-select: none;    /* Safari */
+  -webkit-touch-callout: none;  /* iOS Safari */
+  -khtml-user-select: none;     /* Konqueror HTML */
+  -ms-user-select: none;        /* Internet Explorer/Edge */
+  -moz-user-select: none;       /* Old versions of Firefox */
+   user-select: none;           /* Non-prefixed version*/
 }
 
-.App-link {
-  color: #61dafb;
+h1 {
+  font-size: 128px;
+  line-height: 1.6em;
+  text-transform: uppercase;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h1 span {
+  color: #ffffff;
+  background-color: #000000;
+  padding: 16px;
+  font-size: 152px;
+  cursor: pointer;
+}
+
+h1 span:hover {
+  opacity: .6;
+}
+
+a {
+  background-color: #000000;
+  padding: 8px;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+a:hover {
+  opacity: .5;
 }
