--- a/src/App.css
+++ b/src/App.css
@@ -10,6 +10,9 @@
   -ms-user-select: none;        /* Internet Explorer/Edge */
   -moz-user-select: none;       /* Old versions of Firefox */
    user-select: none;           /* Non-prefixed version*/
+   padding: 16px;
+   min-height: 100vh;
+   width: 100vw;
 }
 
 h1 {
@@ -40,4 +43,13 @@ a {
 
 a:hover {
   opacity: .5;
+}
+
+@media(max-width: 768px){
+  h1 {
+    font-size: 48px;
+  }
+  h1 span {
+    font-size: 48px;
+  }
 }
