--- a/src/App.css
+++ b/src/App.css
@@ -27,6 +27,8 @@ h1 span {
   padding: 16px;
   font-size: 152px;
   cursor: pointer;
+  word-break: break-all;
+  max-width: 80vw;
 }
 
 h1 span:hover {
