--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,12 @@
+body {
+  /* Permalink - use to edit and share this gradient: https://colorzilla.com/gradient-editor/#ff7f00+0,fdc740+25,66c33c+50,1bb08e+75,3e43de+100 */
+background: #ff7f00; /* Old browsers */
+background: -moz-linear-gradient(-45deg,  #ff7f00 0%, #fdc740 25%, #66c33c 50%, #1bb08e 75%, #3e43de 100%); /* FF3.6-15 */
+background: -webkit-linear-gradient(-45deg,  #ff7f00 0%,#fdc740 25%,#66c33c 50%,#1bb08e 75%,#3e43de 100%); /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(135deg,  #ff7f00 0%,#fdc740 25%,#66c33c 50%,#1bb08e 75%,#3e43de 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ff7f00', endColorstr='#3e43de',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+}
+
 .App {
   display: flex;
   justify-content: center;
@@ -28,7 +37,7 @@ h1 span {
   font-size: 152px;
   cursor: pointer;
   word-break: break-all;
-  max-width: 80vw;
+  max-width: 70vw;
 }
 
 h1 span:hover {
